samples/_failures_safe/1761711723_5470e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_14ae3df4.c: In function ‘main’:
./samples/SAFE/__tmp_14ae3df4.c:169:11: error: expected ‘;’ at end of input
  169 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_14ae3df4.c:169:5: error: expected declaration or statement at end of input
  169 |     printf
      |     ^~~~~~
